--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,6 @@ nsm_modules/__pycache__/nsm_files.cpython-313.pyc
 nsm_modules/__pycache__/nsm_network_sniffer.cpython-313.pyc
 nsm_modules/__pycache__/nsm_network_scanner.cpython-313.pyc
 nsm_modules/__pycache__/nsm_server.cpython-313.pyc
+web_modules/nodes.json
 .gitignore
 .gitignore
