--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,18 +3,26 @@ requires = ["setuptools>=61"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "netalert3"
+name = "Yoda"
 version = "3.0.0"
-description = "NetAlert 3.0 - Intrusion Prevention / Alert System"
-authors = [{ name = "Jabari Lucien" }]
-readme = "README.md"
-requires-python = ">=3.8"
 
-[tool.semantic_release]
-version_variable = "nsm_modules/version.py:__version__"
-branch = "main"
-tag_format = "v{version}"
-changelog_file = "CHANGELOG.md"
-upload_to_release = true
-commit_parser = "angular"   # ✅ fixed
-upload_to_pypi = false
+
+dependencies = [
+    "requests",
+    "scapy",
+    "manuf",
+    "ipaddress",
+    "requests",
+    "rich",
+    "pathlib",
+    "pyfiglet",
+    "gtts",
+    "pyttsx3",
+    "ifcfg",
+    "sounddevice",
+    "samplerate"
+]
+
+
+[tool.setuptools]
+packages = ["nsm_modules", "yoda"]
